@@ -12,3 +12,4 @@ amulets.shp
 bgfiredoom.shp
 fellowshipstaff.shp
 BGmap.shp
+defaultkeys.txt
