@@ -22,7 +22,7 @@ extras.shp
 midi_conversion.shp
 sfx_conversion.shp
 palette_fades.shp
-defaultkeys.txt
+NULL
 scaling_method.shp
 savegump.shp
 sav_load.shp
